--- a/app/src/main/res/drawable/shadow_effect.xml
+++ b/app/src/main/res/drawable/shadow_effect.xml
@@ -13,7 +13,7 @@
         android:top="0dp"
         android:bottom="0.5dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/bg_action_bar"/>
             />
         </shape>
     </item>
