--- a/app/src/main/res/layout/custom_header.xml
+++ b/app/src/main/res/layout/custom_header.xml
@@ -2,9 +2,8 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+   >
 
     <LinearLayout
         android:id="@+id/toolbar"
@@ -22,7 +21,7 @@
                 android:layout_height="@dimen/_25sdp"
                 android:layout_centerVertical="true"
                 android:background="@drawable/ic_back"
-                android:backgroundTint="@color/textColor"/>
+                android:backgroundTint="@color/white"/>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/txt_header_toolbar"
@@ -32,23 +31,9 @@
                 android:gravity="start"
                 android:layout_toRightOf="@id/img_toolbarheader"
                 android:text="Teams Information"
-                android:textColor="@color/textColor"
+                android:textColor="@color/white"
                 android:layout_centerVertical="true"
                 android:textSize="16sp" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/search_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:backgroundTint="@color/textColor"
-                android:text= "Select"
-                android:layout_alignParentEnd= "true"
-                android:layout_centerVertical="true"
-                android:textStyle= "bold"
-                android:textColor="@color/textColor"
-                android:textColorHint="@color/textColor"
-                android:textSize="@dimen/_11sdp" />
 
         </RelativeLayout>
 
