--- a/app/src/main/res/layout/home_header.xml
+++ b/app/src/main/res/layout/home_header.xml
@@ -11,7 +11,7 @@
         android:layout_height="@dimen/_30sdp"
         android:layout_marginStart="16dp"
         android:scaleType="fitXY"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/worldcuplogo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
